# borusta

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
benchmark/: bench_python.py  bench_python_real.py  bench_r.R  bench_r_real.R  dataset.csv  generate_dataset.py  generate_real_datasets.py
python/: pyproject.toml  test_bindings.py
python/boruta_rs/: __init__.py
src/: boruta.rs  decision.rs  importance.rs  lib.rs  python.rs  shadow.rs  stats.rs
tests/: integration_test.rs
