[package]
name = "boruta-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smartcore = { version = "0.3", features = ["serde", "ndarray-bindings"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
statrs = "0.16"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
approx = "0.5"
